<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText

                android:id="@+id/etfirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText

                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText

                android:id="@+id/etDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:focusable="false"
                android:lines="1"
                android:drawableRight="@drawable/drop"
                android:maxLines="1"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:lines="1"
                android:focusable="false"
                android:drawableRight="@drawable/drop"
                android:paddingRight="15dp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>
        <Spinner
            android:paddingLeft="40dp"
            android:gravity="start"
            android:layout_gravity="start"
            android:id="@+id/spinner_gender"
            android:visibility="invisible"
            style="@style/SpinnerTheme_gender"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText

                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText

                android:id="@+id/etMobilePrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/primary_number"
                android:lines="1"
                android:maxLines="1"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp">

            <EditText

                android:id="@+id/etMobileSecondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secondary_mobile"
                android:lines="1"
                android:maxLines="1"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText

                android:id="@+id/password"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/input_color"
                android:textColorHint="@color/edit_hint_color" />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/pink"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>