<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:weightSum="6"
        android:padding="20dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_weight="1"
        android:id="@+id/tv_cat"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@+id/img_cat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:lines="2"
            android:textColor="@color/black"
        android:text=""
        android:textSize="15sp"/>
        <RelativeLayout
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TabLayout
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:tabBackground="@drawable/indicator_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
        <TextView
            android:id="@+id/tvDescTitlr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_cat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/desc"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_cat"
            android:layout_marginTop="5dp"
            android:lines="2"
            android:textColor="@color/black"
            android:text=""
            android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
<RelativeLayout
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="50dp">


    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    <Button
        android:layout_weight="1"
        android:id="@+id/just_buy"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/pink"
        android:textAllCaps="true"
        android:text="@string/just_buy"
        android:textColor="@color/white"
        android:textStyle="bold" />
        <Button
            android:layout_weight="1"
            android:id="@+id/add_to_cart"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textAllCaps="true"
            android:background="@color/light_gray"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>